jav7 base64 change